--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 # Production API endpoint
-VITE_API_URL=https://your-backend-domain.com
+VITE_API_URL=https://jajd-construction-api.vercel.app
+VITE_GEMINI_API_KEY=
