--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-# Production API endpoint
-VITE_API_URL=https://jajd-construction-api.vercel.app
+# Production API endpoint (Railway backend)
+VITE_API_URL=https://jajd-construction-production.up.railway.app
 VITE_GEMINI_API_KEY=
