Fix logic errors: add form validation, improve error handling, remove unused date field

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,35 +2,20 @@
 # EMAIL CONFIGURATION FOR LEAD GENERATION
 # ============================================
 
-# OPTION 1: Gmail (Recommended - Free & Simple)
-# 1. Enable 2FA on your Google Account
-# 2. Get App Password: https://myaccount.google.com/apppasswords
-# 3. Use the 16-character password below (spaces removed)
-
-EMAIL_SERVICE=gmail
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=xxxxxxxxxxxx
-
-# OPTION 2: SendGrid (Better Deliverability)
-# 1. Create free account: https://sendgrid.com
+# Resend Email Service (Simple & Reliable)
+# 1. Create free account: https://resend.com
 # 2. Get API key from dashboard
-# 3. Uncomment below and comment out Gmail config
+# 3. Set RESEND_API_KEY below
 
-# EMAIL_SERVICE=SendGrid
-# SENDGRID_API_KEY=SG.your-api-key-here
-
-# ============================================
-# RECEIVER CONFIGURATION (Where Leads Go)
-# ============================================
-
-# Email address where you want to receive leads
+RESEND_API_KEY=your-resend-api-key
+EMAIL_FROM=noreply@yourdomain.com
 RECEIVER_EMAIL=concierge@jajdbuild.com
 
 # ============================================
 # SERVER CONFIGURATION
 # ============================================
 
-PORT=5000
+PORT=5001
 NODE_ENV=development
 
 # ============================================
