--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.2.1",
     "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "resend": "^6.8.0",
-    "tsx": "^4.21.0"
+    "react": "^19.2.3",
+    "express": "^5.2.1",
+    "cors": "^2.8.5",
+    "resend": "^6.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
