Update email leads to go to jajdconstruction@gmail.com
- Updated RECEIVER_EMAIL in backend/.env.example
- Updated all documentation with correct company email
- All lead submissions now go to jajdconstruction@gmail.com instead of jajdbuild.com
- Updated 18+ files with consistent email references
- Configuration examples, code samples, and expected logs all updated

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,7 +9,7 @@
 
 RESEND_API_KEY=your-resend-api-key
 EMAIL_FROM=noreply@yourdomain.com
-RECEIVER_EMAIL=concierge@jajdbuild.com
+RECEIVER_EMAIL=jajdconstruction@gmail.com
 
 # ============================================
 # SERVER CONFIGURATION
