Fix Resend 403 Forbidden: Update EMAIL_FROM to verified domain
- Changed EMAIL_FROM from onboarding@resend.dev to leads@jajdconstruction.com
- Updated backend/server.ts with verified domain sender address
- Changed FROM_EMAIL to EMAIL_FROM and TO_EMAIL to RECEIVER_EMAIL for consistency
- Updated all environment variable examples across documentation
- Updated backend/.env.example with correct email configuration
- Verified domain jajdconstruction.com is now used for email sending
- Resolves 403 Forbidden errors when sending emails via Resend API
- Updated 20+ documentation files with new email configuration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,7 @@
 # 3. Set RESEND_API_KEY below
 
 RESEND_API_KEY=your-resend-api-key
-EMAIL_FROM=noreply@yourdomain.com
+EMAIL_FROM=leads@jajdconstruction.com
 RECEIVER_EMAIL=jajdconstruction@gmail.com
 
 # ============================================
