Update backend to use LEADS_TO_EMAIL env var

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,7 @@
 
 RESEND_API_KEY=your-resend-api-key
 EMAIL_FROM=leads@jajdconstruction.com
+LEADS_TO_EMAIL=jajdconstruction@gmail.com
 RECEIVER_EMAIL=jajdconstruction@gmail.com
 
 # ============================================
