--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
         "./*"
       ]
     },
-    "allowImportingTsExtensions": true,
-    "noEmit": true
+    "allowImportingTsExtensions": false,
+    "noEmit": false,
+    "outDir": "./dist",
+    "sourceMap": true
   }
 }
