fix: explicit tsconfig include and vercel routing for api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,12 @@
     "noEmit": false,
     "outDir": "./dist",
     "sourceMap": true
-  }
+  },
+  "include": [
+    "src",
+    "api",
+    "backend",
+    "utils",
+    "vite.config.ts"
+  ]
 }
