--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "backend:install": "cd backend && npm install",
-    "backend:dev": "cd backend && npm run dev",
-    "backend:build": "cd backend && npm run build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "cors": "^2.8.6",
