--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -27,6 +26,7 @@
     "@types/express": "^5.0.6",
     "@types/express-rate-limit": "^5.1.3",
     "@types/node": "^22.14.0",
+    "@vercel/node": "^5.6.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
