Fix: Configure Vercel backend and clean up env vars

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
 # Frontend API Configuration
-VITE_API_URL=http://localhost:5001
+# Use empty string for relative path (proxies to /api) in production/vercel
+# For local dev, we need to run the backend separately or use Vercel CLI
+VITE_API_URL=
