--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-# Production API endpoint (Railway backend)
-VITE_API_URL=https://jajd-construction-production.up.railway.app
+# Production API endpoint (Vercel)
+# Leave empty to use relative paths /api/... which Vercel handles automatically
+VITE_API_URL=
